@@ -1,7 +1,16 @@
 == 1.5.7 / unreleased
 
 * Bugfixes
+  * SAX::Parser.parse_io throw an error when used with lower case encoding. #828
   * (JRuby) Java Nokogiri is finally green (passes all tests) under 1.8 and 1.9 mode. High five everyone. #798, #705
+  * (JRuby) Nokogiri::XML::Reader broken (as a pull parser) on jruby - reads the whole XML document. #831
+  * (JRuby) JRuby hangs parsing "&amp;". #837
+  * (JRuby) JRuby NPE parsing an invalid XML instruction. #838
+  * (JRuby) Node#content= incompatibility. #839
+  * (JRuby) to_xhtml doesn't print the last slash for self-closing tags in JRuby. #834
+  * (JRuby) Adding an EntityReference after a Text node mangles the entity in JRuby. #835
+  * (JRuby) JRuby version inconsistency: nil for empty attributes. #818
+  * CSS queries for classes (e.g., ".foo") now treat all whitespace identically. #854
 
 == 1.5.6 / 2012年12月19日
 
