@@ -10,6 +10,8 @@
   * (JRuby) to_xhtml doesn't print the last slash for self-closing tags in JRuby. #834
   * (JRuby) Adding an EntityReference after a Text node mangles the entity in JRuby. #835
   * (JRuby) JRuby version inconsistency: nil for empty attributes. #818
+  * CSS queries for classes (e.g., ".foo") now treat all whitespace identically. #854
+
 
 == 1.5.6 / 2012-12-19
 
